--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
 
         >
 
@@ -20,8 +20,14 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
-        <activity android:name=".Register"></activity>
+        <activity android:name=".activity.Register"></activity>
+        <activity android:name=".activity.MainActivity"></activity>
+        <activity android:name=".activity.Panorama"></activity>
+        <activity android:name=".activity.AboutUs_Activity"></activity>
+        <activity android:name=".activity.struct_activity"></activity>
+
 
     </application>
 
